Login Persistence(Ammend)

--- a/.gitignore
+++ b/.gitignore
@@ -477,3 +477,5 @@ $RECYCLE.BIN/
 *.lnk
 DatingApp/.vscode/launch.json
 DatingApp/.vscode/launch.json
+DatingApp/API/Program.cs
+DatingApp/client/ssl/localhost-key.pem
