--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -30,13 +30,17 @@
     "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.12",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/jasmine": "~4.3.0",
+    "daisyui": "^5.5.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.4.5"
   }
 }
