--- a/DatingApp/client/package.json
+++ b/DatingApp/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^20.3.12",
     "@angular/platform-browser-dynamic": "^20.3.12",
     "@angular/router": "^20.3.12",
+    "angular": "^1.8.3",
     "font-awesome": "^4.7.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
