Added Route Guards

--- a/DatingApp/client/angular.json
+++ b/DatingApp/client/angular.json
@@ -117,7 +117,8 @@
       "type": "service"
     },
     "@schematics/angular:guard": {
-      "typeSeparator": "."
+      "skipTests": true,
+      "path": "src/app/guard"
     },
     "@schematics/angular:interceptor": {
       "typeSeparator": "."
