Member Detail Component Age

--- a/DatingApp/client/angular.json
+++ b/DatingApp/client/angular.json
@@ -133,6 +133,8 @@
       "typeSeparator": "."
     },
     "@schematics/angular:pipe": {
+      "skipTests": true,
+      "path": "src/app/pipes",
       "typeSeparator": "."
     },
     "@schematics/angular:resolver": {
