Photo Delete and Delete Button

--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,4 @@ DatingApp/client/ssl/localhost-key.pem
 /DatingApp/API/appsettings.json
 DatingApp/API/datingapp.db-shm
 DatingApp/API/datingapp.db-wal
+DatingApp/API/datingapp.db
